kubernetes/apps/cilium-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      allowedRoutes:
        namespaces:
          from: All
      protocol: HTTPS
      port: 443
      hostname: "*.local"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: public-tls-secret 
            namespace: kube-system
    - name: http
      allowedRoutes:
        namespaces:
          from: All
      hostname: '*.local'
      name: http
      port: 80
      protocol: HTTP
